--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>projecto1</title>
 </head>
 <body>
-    
+   <h1>CARTILLA</h1> 
+ <div>
+    <section><img src="./tepsup.jpg"</section>
+    <h3>Madeleine Quicano</h3>
+ </div>
+
 </body>
 </html>
